# kin

./: .gitignore  ADR.md  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  PROJECT_PLAN.md  README.md  decisions.md  probe_audio.py  pyproject.toml
audio_samples/: README.md
briefs/: bundle-1-context.md
design_reference/round-2/: HANDOVER.md  MAPPING.md  app.jsx  coach-mark.jsx  crisis-and-translit.jsx  icons.jsx  nav-app.jsx  nav-rail.jsx  presentation-mode.jsx  primitives.jsx  queue-view.jsx  record-card.jsx  record-readonly.jsx  structlog.jsx  tool-calls.jsx
docs/: architecture-diagram-CHANGES.md  architecture-diagram-legend.mmd  architecture-diagram.mmd  matching.md  phase-5B-scaffolding.md  test_strategy.md
docs/ADR/: 002-asyncio-mode-strict.md  003-gemma-think-false.md  004-orchestration-architecture.md  005-sse-tests-use-real-uvicorn.md
results/: farsi_retest_summary_20260423_084616.md  multi_turn_probe.jsonl  three_tests_summary_20260423_082052.md
scripts/: expand_languages.py  expand_whisper_baseline.py  farsi_retest.py  fetch_farsi_amharic.py  fetch_fleurs_multi.py  fetch_fleurs_swahili.py  format_spike.py  format_string_spike.py  gemma_extraction_helloworld.py  gemma_extraction_multilang_sweep.py  gemma_hello.py  probe_multilang.py  prose_spike.py  qa_inject.sh  run_three_tests.py  seed_demo_fixtures.py  test_audio_smoke.py  test_mariam_takes.py  translate_safety_keywords.py  whisper_baseline.py
scripts/probes/: multi_turn_coherence.py
src/core/: clock.py  language_matrix.py  matching.py  rfl_schema.py  safety_rules.py  scoring.py  storage_schemas.py  tool_calling.py
src/integration/: _errors.py  escalate_crisis_tool.py  extraction_tools.py  fixture_seed.py  ollama_adapter.py  storage_adapter.py  sync_adapter.py  system_clock.py  transcription_pipeline.py  whisper_adapter.py
tests/: test_clock_protocol.py  test_layer_boundaries.py  test_smoke.py
tests/core/: test_language_matrix.py  test_matching.py  test_rfl_schema.py  (+3 more)
(+109 files in other folders)
