[project]
name = "kin"
version = "0.1.0"
description = "Offline multilingual family reunification agent"
requires-python = ">=3.11"
dependencies = [
    "ollama",
    "requests",
    "python-dotenv",
    "pydantic",
    "structlog",
    "faster-whisper",
    "jellyfish",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
probes = [
    "soundfile",
    "datasets",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "integration*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
asyncio_mode = "strict"
